Fix layout of genome display item on small screens

--- a/src/components/display/genome/genome.css
+++ b/src/components/display/genome/genome.css
@@ -7,3 +7,14 @@
   flex: 1;
   margin-left: 2rem;
 }
+
+@media (max-width: 699px) {
+  .display__genome {
+    flex-direction: column;
+  }
+  .display__genome > *:last-child {
+    flex: 1;
+    margin-left: 0;
+    margin-top: 2rem;
+  }
+}
